# Chessli

./: .clangd  .gitignore  BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  CMakeLists.txt  Chess  Chess.cpp  Chess.h  Pieces.h  README.md  chess.h  main.cpp
include/: board.h  constants.h  move.h  pieces.h  square.h  utils.h
include/board/: board.h
include/engine/: engine.h
include/fen/: fen.h
include/magic/: magic.h
include/magic/bishop_utils/: bishop_attacks.txt  bishop_magics.txt  bishop_masks.txt
include/magic/rook_utils/: rook_attacks.txt  rook_magics.txt  rook_masks.txt
include/move/: move.h
include/pieces/: pieces.h
include/square/: square.h
include/utils/: utils.h
include/validMoveGenerator/: validMoveGenerator.h
src/: Chessli.cpp  Chessli.h  bitboard.cpp  bitboard.h  board.cpp  board.h  engine.cpp  fen.cpp  game.cpp  game.h  move.cpp  pieces.h  utils.cpp  validMoveGenerator.cpp
src/Backend/: Board.h  Chess.cpp
src/backend/: Board.cpp  Board.h  Chess.cpp  Chess.h  Magics.h  Pieces.h  utils.h
src/engine/: engine.cpp  engine.h  magic.cpp  magic.h
src/utils/: chess_constants.cpp  chess_constants.h  utils.cpp  utils.h
